<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChowSense</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="name_field">Name</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="title_activity_add_recipe">AddRecipeActivity</string>
    <string name="btnRemove">Remove</string>
    <string name="btnAdd">Add</string>
    <string name="btnDisplay">Display</string>
    <string name="addIngredientText">Add your ingredients:</string>
    <string name="saveButton">Save The Flavour!</string>
    <string name="titleText">Recipe Title:</string>
    <string name="descriptionText">Description:</string>
    <string name="addStepsText">Steps to delicious meal:</string>
    <string name="stepsDetailText">Steps:</string>
    <string name="ingredientsDetailText">Ingredients:</string>
    <string name="title_activity_recipe_detail">RecipeDetailActivity</string>
    <string name="add_a_recipe">Add A Recipe</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="title_my_recipies">My Recipes</string>
    <string name="chowsense_logo">ShowSenseLogo</string>
    <string name="recipe_icon_desc">Recipe Icon</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="password_prompt">Password: (must contain at least one Capitol letter and one number)</string>
    <string name="password_confirm">Confirm Password:</string>
    <string name="search_prompt">What is in the cupboards?</string>
    <string name="search_btn_text">Make Chowsense!</string>
    <string name="favorites_false">Add to Favorites</string>
    <string name="favorites_true">Remove from Favorites</string>
    <string name="doge1">much settings</string>
    <string name="doge2">such customization</string>
    <string name="doge3">very options</string>
    <string name="doge4">wow</string>
    <string name="no_results">Oh no! We couldn\'t find what you were looking for!</string>
    <string name="about_us">Chowsense is for those moments when you just do not know what to cook with what you have
        got.

        Be inspired with the recipes that are on hand in the app, or help inspire others by contributing to the
        Chowsense community.
    </string>
    <string name="about_people">Chowsense is also the brainchild of Brody Smith and Kate Johnson. We had a great time
        making the app, hoping you have a delicious time using it!
    </string>

    <string-array name="navigation_drawer_items_array">
        <item>Search</item>
        <item>Add Recipe</item>
        <item>Favourites</item>
        <item>My Recipes</item>
        <item>About</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Search</item>
        <item>Browse</item>
        <item>Add Recipe</item>
        <item>Favourites</item>
        <item>My Recipes</item>
        <item>About</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@android:drawable/ic_menu_compass</item>
        <item>@android:drawable/ic_menu_search</item>
        <item>@android:drawable/ic_menu_add</item>
        <item>@android:drawable/star_off</item>
        <item>@android:drawable/ic_menu_view</item>
        <item>@android:drawable/ic_menu_info_details</item>
        <item>@android:drawable/ic_menu_preferences</item>
        <item>@drawable/search_dark</item>

    </array>

    <!-- Measurement Spinner Array -->
    <array name="measurement_array">
        <item>Tsp</item>
        <item>TBSP</item>
        <item>Gram</item>
        <item>Cup</item>
        <item>OZ</item>
        <item>LB</item>
        <item>KG</item>
        <item>mL</item>
        <item>Liter</item>
        <item>Pinch</item>
        <item>Quart</item>
        <item>Gallon</item>
        <item>Whole</item>
        <item>Half</item>
        <item>Quarter</item>
        <item>Third</item>
    </array>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>
