<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="center_horizontal">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" android:layout_marginTop="68dp">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/name_field"
                    android:ems="10"
                    android:id="@+id/nameText" android:layout_gravity="center_horizontal"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:text="@string/email_field"
                    android:id="@+id/emailText" android:layout_gravity="center_horizontal"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:text="@string/password_field"
                    android:id="@+id/passwordText"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="68dp">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:id="@+id/registerButton"
                    android:layout_gravity="center_horizontal"
                    android:onClick="buttonClick"
                    />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:onClick="buttonClick"
                    android:id="@+id/cancelButton"
                    />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Test Object" android:onClick="testButton"
                    android:id="@+id/button" android:layout_gravity="center_vertical"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="New Text"
                    android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>