<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.kathylynne.chowsense.app.AddRecipeActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearTop">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleText"
                    android:id="@+id/titleTextView"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleText"
                    android:layout_weight="1.00"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionText"
                    android:id="@+id/descriptionTextView"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/descriptionText"
                    android:layout_weight="1.00"
                    android:layout_below="@+id/titleText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeContainer"
            android:layout_below="@+id/linearTop">

        <TextView android:id="@+id/textView1"
                  android:layout_width="95dp"
                  android:layout_height="fill_parent"
                  android:layout_alignBottom="@+id/btnAdd"
                  android:layout_alignParentLeft="true"
                  android:layout_toLeftOf="@+id/btnAdd"
                  android:gravity="center_vertical|center_horizontal"
                  android:text="@string/addIngredientText"
                  android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageButton android:id="@+id/btnAdd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:contentDescription="@string/btnAdd"
                     android:src="@android:drawable/ic_input_add"/>
    </RelativeLayout>
    <ScrollView android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeContainer">
        <LinearLayout android:id="@+id/linearLayoutForm"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stepContainer"
            android:layout_below="@+id/scrollView1">

        <TextView android:id="@+id/stepTextView"
                  android:layout_width="95dp"
                  android:layout_height="fill_parent"
                  android:layout_alignBottom="@+id/btnAddStep"
                  android:layout_alignParentLeft="true"
                  android:layout_toLeftOf="@+id/btnAddStep"
                  android:gravity="center_vertical|center_horizontal"
                  android:text="@string/addStepsText"
                  android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageButton android:id="@+id/btnAddStep"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:contentDescription="@string/btnAdd"
                     android:src="@android:drawable/ic_input_add"/>
    </RelativeLayout>
    <ScrollView android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stepContainer">
        <LinearLayout android:id="@+id/stepLinearLayoutForm"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
        </LinearLayout>
    </ScrollView>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveButton"
            android:id="@+id/saveRecipeButton"
            android:onClick="saveRecipe"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>


</RelativeLayout>
