<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.kathylynne.chowsense.app.AddRecipeActivity" android:background="#ffffffff">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:fillViewport="true">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearParent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearTop">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/titleText"
                            android:id="@+id/titleTextView" android:textColor="#80A074"/>
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/titleText"
                            android:layout_weight="1.00"
                            android:textColor="@color/primary_material_dark"
                            android:inputType="text"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descriptionText"
                            android:id="@+id/descriptionTextView" android:textColor="#80A074"/>
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:id="@+id/descriptionText"
                            android:textColor="@color/primary_material_dark"
                            android:layout_weight="1.00"
                            />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/relativeContainer"
                    android:weightSum="1">

                <TextView android:id="@+id/textView1"
                          android:layout_width="0dp"
                          android:layout_height="fill_parent"
                          android:gravity="center_vertical|center_horizontal"
                          android:text="@string/addIngredientText"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:layout_weight="1.00"/>

                <ImageButton android:id="@+id/btnAdd"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:contentDescription="@string/btnAdd"
                             android:src="@android:drawable/ic_input_add" android:cropToPadding="false"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/scrollView1"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                    >
                <LinearLayout android:id="@+id/linearLayoutForm"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/stepContainer"
                    android:weightSum="1">

                <TextView android:id="@+id/stepTextView"
                          android:layout_width="0dp"
                          android:layout_height="fill_parent"
                          android:gravity="center_vertical|center_horizontal"
                          android:text="@string/addStepsText"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:layout_weight="1.00"/>

                <ImageButton android:id="@+id/btnAddStep"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:contentDescription="@string/btnAdd"
                             android:src="@android:drawable/ic_input_add"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/scrollView2"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                    >
                <LinearLayout android:id="@+id/stepLinearLayoutForm"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>


            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saveButton"
                    android:id="@+id/saveRecipeButton"

                    android:layout_gravity="center_horizontal"
                    style="@android:style/ButtonBar" android:background="@drawable/bottom_bar"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
