<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/navigation_container" android:background="#ff4caf50" android:clickable="true">


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent" android:id="@+id/linearLayout" android:orientation="vertical">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/imageView2"
                android:src="@drawable/veg_banner"
                android:contentDescription="@string/recipe_icon_desc"
                android:cropToPadding="false" android:scaleType="fitXY"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" android:gravity="center_vertical|center_horizontal">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:gravity="center_vertical"
                    android:id="@+id/searchImageButtonLayout"
                    android:clickable="true">
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/searchImageButton"
                        android:src="@drawable/search_light"

                        android:background="@android:color/transparent"

                        />
                <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/search"
                        android:id="@+id/textView5" android:textColor="#ffffffff" android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:id="@+id/addImageButtonLayout"
                    android:clickable="true">
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addImageButton"
                        android:src="@drawable/add_light"
                        android:background="@android:color/transparent"
                        android:onClick="navClick"/>
                <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/add_a_recipe"
                        android:id="@+id/textView7" android:textColor="#ffffffff" android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:gravity="center_vertical"
                    android:id="@+id/favouriteImageButtonLayout"
                    android:clickable="true">
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:id="@+id/favouriteImageButton" android:src="@drawable/favourite_light"
                        />
                <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/favourites"
                        android:id="@+id/textView8" android:textColor="#ffffffff" android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:gravity="center_vertical"
                    android:id="@+id/myImageButtonLayout"
                    android:clickable="true">
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/myImageButton"
                        android:background="@android:color/transparent"
                        android:src="@drawable/like_light"/>
                <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/title_my_recipies"
                        android:id="@+id/textView9" android:textColor="#ffffffff" android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>